--- a/WorkshopAssignmentApp/Pages/Participants.razor
+++ b/WorkshopAssignmentApp/Pages/Participants.razor
@@ -62,7 +62,7 @@
         </MudTd>
     </RowEditingTemplate>
     <FooterContent>
-        <MudTh><MudFab Icon="@Icons.Material.Filled.Add" Color="Color.Primary" Disabled="addingItemsDisabled" Label="Workshop hinzufügen" aria-label="add" OnClick="AddNewWorkshop"></MudFab></MudTh>
+        <MudTh><MudFab Icon="@Icons.Material.Filled.Add" Color="Color.Primary" Disabled="addingItemsDisabled" Label="Teilnehmer*in hinzufügen" aria-label="add" OnClick="AddNewWorkshop"></MudFab></MudTh>
     </FooterContent>
 </MudTable>
 
